Showcase: Fix alignment of featured site cards.
Props vajaparadarshit, coffee2code.
Fixes #4934.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@9517 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-showcase/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-showcase/style.css
@@ -735,7 +735,6 @@ a.wpsc-hero-learnmore {
 .wpsc-recent>li:first-child a {
 	display: inline-block;
 	max-height: 161px;
-	overflow: hidden;
 }
 
 .wpsc-recent>li .screenshot {
